# poetry-plugin-code-artifact

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml  test.yml
poetry_plugin_code_artifact/: __init__.py  plugin.py
tests/: test_dummy.py
